<resources>
    <string name="app_name">Settings Data</string>
    <string name="empty_text" />
    <string name="parcel">Parcel</string>
    <string name="parcelable">Parcelable</string>
    <string name="main_activity">Main Activity</string>
    <string name="send">Send</string>
    <string name="second_activity">Second Activity</string>
    <string name="save_restore">Save Restore</string>
    <string name="counter">Counter</string>
    <string name="preference_activity">Preference Activity</string>
    <string name="preferences_list">Preferences List</string>
    <string name="preference_settings">Preference Settings</string>
    <string name="programmatically">Programmatically</string>
    <string name="data">data</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="write_file">Write file</string>
    <string name="read_file">Read file</string>

    // File
    <string name="write_file_sd">Write file on SD</string>
    <string name="read_file_sd">Read file from SD</string>
    <string name="working_with_file">Working with file</string>
    <string name="xml_parsing">XML parsing</string>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
