<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground"
    tools:context=".working_with_file.WithFileActivity">

    <Button
        android:id="@+id/write_file_button"
        style="@style/StyleButtons"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/style_buttons"
        android:onClick="onClickButtons"
        android:text="@string/write_file"
        app:layout_constraintBottom_toTopOf="@+id/read_file_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/read_file_button"
        style="@style/StyleButtons"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_buttons"
        android:onClick="onClickButtons"
        android:text="@string/read_file"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/write_file_sd_button"
        style="@style/StyleButtons"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_buttons"
        android:onClick="onClickButtons"
        android:text="@string/write_file_sd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <Button
        android:id="@+id/read_file_sd_button"
        style="@style/StyleButtons"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_buttons"
        android:onClick="onClickButtons"
        android:text="@string/read_file_sd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_file_sd_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>